added lime section text

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -55,6 +55,8 @@
             <img class="border-purple" src="image-05.jpeg" alt="swatch of perkins purple dye">
             <figcaption> <span>image 03: </span> “Perkin mauve” dyed silk, 1860. Photo courtesy of National Museum of American History</figcaption>
         </figure>
+
+        <p>Perkin’s purple changed history. He applied for a patent and abandoned the lab for the path of manufacturing. He paved the way for modern chemistry to move into industrial applications, and indirectly led to advances in modern medicine, explosives, photography, and plastics.</p>
     </section>
 
 
