added back to top

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -17,7 +17,7 @@
 
     <!-- love letters collection title -->
     <header>
-        <h1>love letters to colour</h1>
+        <h1 id="top">love letters to colour</h1>
     </header>
 
     <!-- intro text -->
@@ -69,6 +69,8 @@
     <!-- orange section -->
     <section>
         <p>kiki</p>
+    <a href="#top"><p style="text-align: center;">back to top!<p><a> 
+    </div>
     </section>
 
 
