organising into div's

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -22,6 +22,7 @@
 
     <!-- intro text -->
     <section>
+        <div>
         <p>entry 05: developments
 
         <br><br>Until the mid-1800s, all dyes came from natural sources, such as insects, roots, or minerals. Producing them was difficult and expensive.</p>
@@ -32,22 +33,26 @@
         </figure>
 
         <p>Sea snails like these are found around the world. When poked (milked) or crushed, they secrete a substance that was used for making purple dye as early as 1570 BC. Thousands of snails were needed to color a single robe, and for centuries purple dye was more valuable than silver and worn only by royalty.</p>
+        </div>  
     </section>
 
 
 
     <!-- purple section -->
     <section>
+        <div>
         <figure>
             <img src="image-07.jpeg" alt="image of cotton yarn naturally dyed with tixinda dye" class="border-off-white">
                 <figcaption><span>image 02:</span> Cotton yarn with tixinda dye, 2012 Pinotepa de Don Luis, Oaxaca, Mexico. Gift of Marilyn Murphy, www.clothroads.com</figcaption>
         </figure>
 
         <p>Mixtec weavers in Oaxaca, Mexico, color locally grown cotton with natural dyes — including the rare purple tixinda, extracted from the Plicopurpura pansa mollusk. The introduction of synthetic dyes and the decline of mollusk populations have greatly reduced the production of natural purple dye.</p>
+        </div>
     </section>
 
     <!-- lime section -->
     <section>
+        <div>
         <p>But woah, synthetic dyes?</p>
         <p><br>In 1856, an 18-year-old English chemist, William Henry Perkin, accidentally discovered one of the first synthetic dyes. In search of a treatment for malaria, Perkin experimented with coal tar, a thick, dark liquid by-product of coal-gas production. His experiment failed but left behind an oily residue that stained silk a brilliant purple. He called the dye mauveine.</p>
 
@@ -57,18 +62,22 @@
         </figure>
 
         <p>Perkin’s purple changed history. He applied for a patent and abandoned the lab for the path of manufacturing. He paved the way for modern chemistry to move into industrial applications, and indirectly led to advances in modern medicine, explosives, photography, and plastics.</p>
+     </div>
     </section>
 
 
     <!-- purple section-->
     <section>
         <p>juju</p>
+    <div>
+    </div>
     </section>
 
 
     <!-- orange section -->
     <section>
         <p>kiki</p>
+    <div>
     <a href="#top"><p style="text-align: center;">back to top!<p><a> 
     </div>
     </section>
