final fig-captions

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -30,6 +30,7 @@
         <figure>
             <img src="image-06.jpeg" alt="“Milking” Plicopurpura pansa for natural purple dye" class="border-purple"> 
             <figcaption><span>image 01:</span> “Milking” Plicopurpura pansa, Oaxaca, Mexico. </figcaption>
+            <figcaption>image 01: “Milking” Plicopurpura pansa, Oaxaca, Mexico. </figcaption>
         </figure>
 
         <p>Sea snails like these are found around the world. When poked (milked) or crushed, they secrete a substance that was used for making purple dye as early as 1570 BC. Thousands of snails were needed to color a single robe, and for centuries purple dye was more valuable than silver and worn only by royalty.</p>
@@ -44,6 +45,7 @@
         <figure>
             <img src="image-07.jpeg" alt="image of cotton yarn naturally dyed with tixinda dye" class="border-off-white">
                 <figcaption><span>image 02:</span> Cotton yarn with tixinda dye, 2012 Pinotepa de Don Luis, Oaxaca, Mexico. Gift of Marilyn Murphy, www.clothroads.com</figcaption>
+                <figcaption>image 02: Cotton yarn with tixinda dye, 2012 Pinotepa de Don Luis, Oaxaca, Mexico. Gift of Marilyn Murphy, www.clothroads.com</figcaption>
         </figure>
 
         <p>Mixtec weavers in Oaxaca, Mexico, color locally grown cotton with natural dyes — including the rare purple tixinda, extracted from the Plicopurpura pansa mollusk. The introduction of synthetic dyes and the decline of mollusk populations have greatly reduced the production of natural purple dye.</p>
@@ -59,6 +61,7 @@
         <figure>
             <img class="border-purple" src="image-05.jpeg" alt="swatch of perkins purple dye">
             <figcaption> <span>image 03: </span> “Perkin mauve” dyed silk, 1860. Photo courtesy of National Museum of American History</figcaption>
+            <figcaption>image 03: “Perkin mauve” dyed silk, 1860. Photo courtesy of National Museum of American History</figcaption>
         </figure>
 
         <p>Perkin’s purple changed history. He applied for a patent and abandoned the lab for the path of manufacturing. He paved the way for modern chemistry to move into industrial applications, and indirectly led to advances in modern medicine, explosives, photography, and plastics.</p>
@@ -70,6 +73,8 @@
     <section>
         <p>juju</p>
     <div>
+            <figcaption>image 04: Godey's Lady’s Book and Magazine, 1861-1877 </figcaption>
+        </figure>
     </div>
     </section>
 
