--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -54,12 +54,14 @@
     <section>
         <div>
         <p>But woah, synthetic dyes?</p>
+        <p><br>In 1856, an 18-year-old English chemist, William Henry Perkin, accidentally discovered one of the first synthetic dyes. In search of a treatment for malaria, Perkin experimented with coal tar, a thick, dark liquid by-product of coal-gas production. His experiment failed but left behind an oily residue that stained silk a brilliant purple. He called the dye <span>mauveine.</span></p>
 
         <figure>
             <img class="border-purple" src="image-05.jpeg" alt="swatch of perkins purple dye">
             <figcaption>image 03: “Perkin mauve” dyed silk, 1860. Photo courtesy of National Museum of American History</figcaption>
         </figure>
 
+        <p><span>Perkin’s purple</span> changed history. He applied for a patent and abandoned the lab for the path of manufacturing. He paved the way for modern chemistry to move into industrial applications, and indirectly led to advances in modern medicine, explosives, photography, and plastics.</p>
      </div>
     </section>
 
