added last paragraph of text

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -77,8 +77,11 @@
 
     <!-- orange section -->
     <section>
-        <p>kiki</p>
     <div>
+        <p>Synthetic dyes became big business after 1860, with Germany in the lead. This BASF dye sample catalog displays the vibrant variety of new synthetic colors. Founded in Germany in 1865 to manufacture dyes, BASF is one of the oldest chemical companies in existence today.</p>
+
+
+
     <a href="#top"><p style="text-align: center;">back to top!<p><a> 
     </div>
     </section>
