--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -69,6 +69,10 @@
     <!-- purple section-->
     <section>
     <div>
+        <p>Perkin’s new purple took the fashion world by storm. First appearing in Paris and London, it quickly spread to America and was heavily featured in popular women's magazines of the day.</p>
+
+        <figure>
+            <img src="image-08.jpeg" alt="historical image of women in purple" class="border-orange">
             <figcaption>image 04: Godey's Lady’s Book and Magazine, 1861-1877 </figcaption>
         </figure>
     </div>
