added white section

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -52,7 +52,8 @@
     </section>
 
     <!-- lime section -->
-    <section class="three">
+    <main class="seven">
+    <section class="three limebg">
         <div>
         <p>But woah, synthetic dyes?</p>
         <p><br>In 1856, an 18-year-old English chemist, William Henry Perkin, accidentally discovered one of the first synthetic dyes. In search of a treatment for malaria, Perkin experimented with coal tar, a thick, dark liquid by-product of coal-gas production. His experiment failed but left behind an oily residue that stained silk a brilliant purple. He called the dye <span>mauveine.</span></p>
@@ -66,9 +67,12 @@
      </div>
     </section>
 
+    <section class="four"> </section>
+    </main>
+
 
     <!-- purple section-->
-    <section class="four">
+    <section class="five purplebg">
     <div>
         <p>Perkin’s new purple took the fashion world by storm. First appearing in Paris and London, it quickly spread to America and was heavily featured in popular women's magazines of the day.</p>
 
@@ -81,7 +85,7 @@
 
 
     <!-- orange section -->
-    <section class="five">
+    <section class="six orangebg">
     <div>
         <p>Synthetic dyes became big business after 1860, with Germany in the lead. This BASF dye sample catalog displays the vibrant variety of new synthetic colors. Founded in Germany in 1865 to manufacture dyes, BASF is one of the oldest chemical companies in existence today.</p>
     </div>
