--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>harmonic collection</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
@@ -11,7 +11,7 @@
     <h1><i>harmonic collection</i></h1>
     <p>anushka vhatkar</p>
     <ul>
-      <li><a href="entry-01/index.html">Entry 01</a></li> 
+      <br><li><a href="entry-01/index.html">Entry 01</a></li> 
       <li><a href="entry-02/index.html">Entry 02</a></li>
       <li><a href="entry-03/index.html">Entry 03</a></li>
       <li><a href="entry-04/index.html">Entry 04</a></li>
