--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
+
+
+
   <body>
-    <h1><i>harmonic collection</i></h1>
+   <div><h1><i>love letters to colour</i></h1></div>
+
     <p>anushka vhatkar</p>
+
     <ul>
       <br><li><a href="entry-01/index.html">Entry 01</a></li> 
       <li><a href="entry-02/index.html">Entry 02</a></li>
@@ -17,5 +22,7 @@
       <li><a href="entry-04/index.html">Entry 04</a></li>
       <li><a href="entry-05/index.html">Entry 05</a></li>
     </ul>
+
+    <div><p>hello!</p></div>
   </body>
 </html>
