entry divs setup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <nav>harmonic collection</nav>
 
     <main>
-        
+        <div class="entry01"> entry 01 </div>
+
+        <div class="entry02"> entry 02 </div>
+
+        <div class="entry03"> entry 03 </div>
+
+        <div class="entry04"> entry 04 </div>
+
+        <div class="entry05"> entry 05 </div>
+
+
     </main>
 
 
