--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 
   <body>
-    <nav>harmonic collection</nav>
+    <nav></nav>
 
     <main>
-        <div class="entry01"> entry 01 </div>
+        <a href="entry-01/index.html" class="entry01"> <div> <p> Entry 01: Exposition ↗ </p> </div></a>
 
-        <div class="entry02"> entry 02 </div>
+        <a href="entry-02/index.html" class="entry02"><div> <p> Entry 02: Rising Action ↗ </p> </div></a>
 
-        <div class="entry03"> entry 03 </div>
+        <a href="entry-03/index.html" class="entry03"> <div> <p> Entry 03: Drama ↗ </p> </div></a>
 
-        <div class="entry04"> entry 04 </div>
+        <a href="entry-04/index.html" class="entry04"><div> <p> Entry 04: Conflict of Interest ↗ </p></div></a>
 
-        <div class="entry05"> entry 05 </div>
+        <a href="entry-05/index.html" class="entry05"> <div> <p> Entry 05: Developments ↗ </p> </div></a>
 
 
     </main>
