removed style.css from individual entries

--- a/entry-01/index.html
+++ b/entry-01/index.html
@@ -4,7 +4,7 @@
     <title>entry-01</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.png">
     <link rel="stylesheet" href="../entry-01/style-01.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <!-- <link rel="stylesheet" href="../styles/style.css"> -->
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="https://use.typekit.net/eft2qeb.css"> 
     <meta charset="utf-08" />
