tried padding entry 02

--- a/entry-02/index.html
+++ b/entry-02/index.html
@@ -12,8 +12,9 @@
     </style>
   </head>
   <!-- ----------- -->
-  <body style="margin-bottom: 200px;">
+  <body>
 <div class="wrapper">
+    <main class="padding">
  <!-- section 01 header + intro + flamingo image -->
     <div> 
     <div class="float-left">
@@ -83,6 +84,7 @@
 
     </p>
 </div>
+</main>
 
 <!-- sticky? -->
 <div>
