--- a/entry-01/index.html
+++ b/entry-01/index.html
@@ -73,11 +73,14 @@ their energy is converted to heat.<br>
 </div>
 
 <article>
-  <footer class="foot">
 <br><br><br>
+    <div class="nav bodytext">
 
+      <p><a href="../index.html">index</a></p>
 
-  </footer>
+      <p><a href="../entry-02/index.html"> next → </a></p>
+    </div>
+
 </article>
 
 
