--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -52,8 +52,16 @@
 
   </div>
 
+  <div class="nav body-text">
+    <p> <a href="../entry-02/index.html"> ← back </a></p>
+
+    <p> <a href="../index.html"> index </a></p>
+
+    <p>  <A href="../entry-04/index.html">next → </A> </p>
 
 
+  </div>
+  
   <!-- other colour-->
 
 
