--- a/index-01.html
+++ b/index-01.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>harmonic collection</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style-01.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
