--- a/entry-06/index.html
+++ b/entry-06/index.html
@@ -13,16 +13,17 @@
 
 </head>
 
-<body class="wrapper">
-
+<body>
+    <section class="wrapper">
     <div class="border">
         <p> <span class="title"> love letters to color </span><p>
 
-        <img src="../images/image-15.jpeg" alt="ultramarine blue pigment" class="image-border">
+        <figure><img src="../images/image-15.jpeg" alt="ultramarine blue pigment" class="image-border">
 
+        <figcaption>image:<span class="italic"> Ultramarine Blue,</span> jacksonsart.com. </figcaption></figure>
 
-    <p>Unlike the structurally-created blues that exist in the natural world, synthetic blue is actually pretty easy to find in the constructed environment. After all, it’s not the world’s favorite calm and cool color for nothing. But over the last two years, supply chains seem to have come for blue as well.</p></div>
-    
+    <p>Unlike the <a href="../entry-02/index.html"> structurally-created blues</a> that exist in the natural world, synthetic blue is actually pretty easy to find in the constructed environment. After all, it’s not the world’s favorite calm and cool color for nothing. But over the last two years, supply chains seem to have come for blue as well.</p></div>
+
 
     <div class="border">
         <p>A shortage of titanium dioxide, the pigment used to make titanium white is to blame. Why is titanium white relevant? Well, it’s a fundamental ingredient found in over a third of paints.</p>
@@ -36,6 +37,13 @@
 
         <p>As Narayan Khandekar, curator of the Forbes Pigment Collection at Harvard Art Museum says, “A white wall is not just a white wall, it’s either a warm or cool white. Even car tires — each car tire has probably six pounds of carbon black in it to make it black instead of latex milky white. There are pigments used everywhere, even in ways that we take for granted.” </p>
     </div>
+</section>
+
+    <nav>
+        <p><a href="../entry-05/index.html">entry 05</a></p>
+        <p><a href="../index.html">index</a></p>
+        <p><a href="">entry 07</a></p>
+    </nav>
 
 
 
