--- a/entry-06/index.html
+++ b/entry-06/index.html
@@ -37,6 +37,11 @@
 
         <p>As Narayan Khandekar, curator of the Forbes Pigment Collection at Harvard Art Museum says, “A white wall is not just a white wall, it’s either a warm or cool white. Even car tires — each car tire has probably six pounds of carbon black in it to make it black instead of latex milky white. There are pigments used everywhere, even in ways that we take for granted.” </p>
     </div>
+
+    <div>
+    <p>What would we do in a world without titanium white? A world without blue? A world without [some] colors?</p>
+    </div>
+
 </section>
 
     <nav>
