--- a/entry-07/index.html
+++ b/entry-07/index.html
@@ -15,6 +15,11 @@
 
 <body>
 
+    <nav>
+        <p><a href="../entry-06/index.html"><span class="nav">PREVIOUS</span></a></p>
+        <p><a href="../index.html"><span class="nav">INDEX</span></a></p>
+        <p><a href=""><span class="nav">NEXT</span></a></p>
+    </nav>
 
 
 
