--- a/entry-07/index.html
+++ b/entry-07/index.html
@@ -21,11 +21,63 @@
         <p><a href=""><span class="nav">NEXT</span></a></p>
     </nav>
 
+<main>
 
-
+<section>
+<div>
+    <p>Recently, a video went viral on TikTok. It’s caused me to think a lot about color and its existence in the constructed environment. 
+        
+    <br><Br>In it, the narrator makes a compelling argument for how color is disappearing from the world. 
     
+    <br><br>How so?</p>
+</div>
+</section>
+
+
+<section class="outline">
+  <div>
+    <p>The Science Media Group Digital Lab analysed a collection of objects from the Science Media Group Collection. Over 7,000 photographs in 21 categories, to be precise. The categories were selected on the basis that they contained large numbers of everyday, familiar objects.</p>
+  </div>
+</section>
+
+
+<section>
+    <div>
+        <figure>
+            <img src="../images/image-14.png" alt="results of study" class="image-border">
+
+            <figcaption> image: <span class="italic"> Changes in the color of objects through time,</span> Science Museum Group Collection. </figcaption></figure>
+    </div>
+</section>
+
+<section>
+    <div>
+        <p>The above image marks their observations: how the colors of objects have changed over time. 
+            <br><br>The most notable trend, from all their final published materials, is the rise in grey over time. This is matched by a decline in brown and yellow. Two centuries ago, there was a mix of different colors, with grey/ black/ white tones representing about 15% of all items. Today, the aggregate is a lot more greyed out.</p>
+    </div>
+</section>
+
+
+<section class="outline">
+    <div>
+        <p>Cars, for example. Nearly 65% of all manufactured cars are black, grey or white. What about interiors? The most popular carpet color is grey. The most popular paint colors have names like “fog”, “mist”, and “linen”.</p>
+    </div>
+</section>
+
+
+<section>
+    <div>
+        <p>
+            This one study certainly isn’t enough to up-and-declare that color is disappearing from our world. But is it? Are things becoming more monotone like in a dystopian society? Or are we just creating everyday objects with monotone materials? (i.e. switching from primarily using different types of wood to different types of metal, courtesy Modernism)
+
+            <br><br>We certainly subscribe to the process of streamlining and making products and environments as sale-worthy as we can. But when we focus on making them as next-renter-friendly as possible, what aspects of individuality and culture do we lose?    
+        </p>
+    </div>
+</section>
 
 
 
+
+</main>
 
 </body></html>
