--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
             <a href=""> 
                 <div> <p class="description"><span class="italic"> Anushka's Harmonic Collection 
-                <br>Exploring the magic of colour one webpage at a time </span></p> </div>
+                <br>Exploring the magic of colour one webpage at a time
+                 </span></p> </div>
             </a>
         </main>
       </body>
