--- a/index-01.html
+++ b/index-01.html
@@ -105,6 +105,44 @@
 
 
   
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <title>Love Letters to Colour</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <meta charset="utf-08" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  </head>
+
+
+  <body>
+    <nav></nav>
+
+    <main>
+        <a href="entry-01/index.html" class="entry01"> <div> <p> Entry 01: Exposition ↗ </p> </div></a>
+
+        <a href="entry-02/index.html" class="entry02"><div> <p> Entry 02: Rising Action ↗ </p> </div></a>
+
+        <a href="entry-03/index.html" class="entry03"> <div> <p> Entry 03: Drama ↗ </p> </div></a>
+
+        <a href="entry-04/index.html" class="entry04"><div> <p> Entry 04: Conflict of Interest ↗ </p></div></a>
+
+        <a href="entry-05/index.html" class="entry05"> <div> <p> Entry 05: Developments ↗ </p> </div></a>
+
+
+    </main>
+
+
+
+
+
+
+
+
+
+  </body>-->
 
 
  
