--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/x-icon" href="./images/favicon.png">
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="./styles/reset.css">
-        <meta charset="utf-08" />
+        <meta charset="utf-08">
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <style>
             @import url("https://use.typekit.net/eft2qeb.css");
@@ -17,7 +17,7 @@
         <nav><p>LOVE LETTERS TO COLOUR</p></nav>
 
         <main>
-            <a href="entry-01/index.html"> 
+            <a href="entry-01/index.html" class="one"> 
                 <div> <p> Entry 01: Exposition</p> </div>
             </a>
 
