--- a/entry-08/index.html
+++ b/entry-08/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/entry-08/style-08.css">
-    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="../entry-08/style-08.css">
+    <link rel="stylesheet" href="../styles/reset.css">
     <style>
         @import url("https://use.typekit.net/eft2qeb.css");
       </style>
@@ -27,9 +27,9 @@
 
 <section class="text">
     <p>
-        note: trying to fix nav bar padding
+        <!-- note: trying to fix nav bar padding -->
 
-        <br><br>There’s a few things from my childhood I remember animatedly. One of these memories is being sprawled over the floor with student-grade poster colors. Swatch after swatch, I used to try so hard to conjure just the orange I was thinking of. I was usually unable to and gave up on the endeavour after a few years.
+        There’s a few things from my childhood I remember animatedly. One of these memories is being sprawled over the floor with student-grade poster colors. Swatch after swatch, I used to try so hard to conjure just the orange I was thinking of. I was usually unable to and gave up on the endeavour after a few years.
     <br><br>The pieces all fell into place coming across a color theory tutorial a lot of years later. My understanding of colors and mixing them and pigments suddenly shifted. I began visualising and diagnosing them better. Here goes.</p>
 </section>
 
@@ -65,7 +65,7 @@
         <p class="small">=</p>
 
         <div class="column">
-            <div class="color">
+            <div class="color bright-green">
             </div>
 
             <span class="caption">cool, &shy; vibrant greens!</span>
@@ -94,7 +94,7 @@
         <p class="small">=</p>
 
         <div class="column">
-            <div class="color">
+            <div class="color murky-green ">
             </div>
 
             <span class="caption">murkier greens</span>
@@ -130,7 +130,7 @@
         <p class="small">=</p>
 
         <div class="column">
-            <div class="color">
+            <div class="color dull-orange">
             </div>
 
             <span class="caption"> duller oranges</span>
@@ -159,7 +159,7 @@
         <p class="small">=</p>
 
         <div class="column">
-            <div class="color">
+            <div class="color bright-orange">
             </div>
 
             <span class="caption">bright oranges!</span>
