linked index files

--- a/entry-08/index.html
+++ b/entry-08/index.html
@@ -18,9 +18,9 @@
 
 <nav>
     <section>
-<p>previous</p>
-<p>index</p>
-<p>next</p>
+<p><a href="../entry-07/index.html">previous</a></p>
+<a href="../index.html"><p>index</p></a>
+<a><p>next</p></a>
     </section>
 </nav>
 
