--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             </a>
 
             <a href="entry-07/index.html"> 
-                <div> <p> Entry 07:  </p> </div>
+                <div> <p> Entry 07: The Big Twist  </p> </div>
             </a>
             
             <a href="entry-08/index.html"> 
-                <div> <p> Entry 08:  </p> </div>
+                <div> <p> Entry 08: Cast & Characters  </p> </div>
             </a>
 
             <a href="entry-09/index.html"> 
