--- a/entry-09/index.html
+++ b/entry-09/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Document</title>
+    <title>Changing Characters</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
             <div class="warm-yellow"></div>
             <button id="three">maybe both?</button>
         </article>
-        
+
     </main>
 
 
