--- a/entry-09/index.html
+++ b/entry-09/index.html
@@ -27,22 +27,37 @@
     <main>
 
         <article>
-            <div class="warm-red"></div>
-            <button id="one">can you tell if i'm warm?</button>
+            <div class="red"></div>
+            <button id="one">warm colours (generally) lean red</button>
         </article>
 
 
+        <article>
+            <div class="green"></div>
+            <button id="four">cool colours lean green </button>
+        </article>
 
         <article>
-            <div class="cool-blue"></div>
+            <div class="yellow"></div>
+            <button id="three">so</button>
+        </article>
+
+        <article>
+            <div class="purple"></div>
+            <button id="five">can you tell if i'm warm?</button>
+        </article>
+
+        <article>
+            <div class="blue"></div>
             <button id="two">or cool? </button>
         </article>
 
-
         <article>
-            <div class="warm-yellow"></div>
-            <button id="three">maybe both?</button>
+            <div class="orange"></div>
+            <button id="six">maybe both?</button>
         </article>
+
+
 
     </main>
 
