--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a>
 
             <a href="entry-09/index.html"> 
-                <div> <p> Entry 09:  </p> </div>
+                <div> <p> Entry 09: Changing Characters  </p> </div>
             </a>
 
             <a href="entry-10/index.html"> 
